--- a/index.html
+++ b/index.html
@@ -1871,7 +1871,7 @@ function refreshOrbImage(){ const img = document.getElementById('orbImg'); const
 function refreshUI(){
   document.getElementById('chadCount').textContent = fmt(state.chads);
   document.getElementById('genRate').textContent = fmt(state.gen);
-  document.getElementById('levelText').textContent = 'OFF';
+  document.getElementById('levelText').textContent = 'Lize';
   setUserPill(state.name, state.avatarIdx); refreshOrbImage();
 }
 
