--- a/index.html
+++ b/index.html
@@ -6,6 +6,146 @@
 <title>ChadiliZe — Telegram Mini App</title>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 <style>
+ :root{
+    --bg: var(--tg-theme-bg-color, #0b0e14);
+    --fg: var(--tg-theme-text-color, #eaf2ff);
+    --muted: color-mix(in oklab, var(--fg) 65%, transparent);
+    --card: color-mix(in oklab, var(--bg) 60%, #121826 40%);
+    --border: color-mix(in oklab, var(--fg) 10%, transparent);
+    --accent: var(--tg-theme-button-color, #5b8cff);
+    --accent-text: var(--tg-theme-button-text-color, #080b12);
+    --glow: 0 12px 40px rgba(91,140,255,.35);
+    --radius-xl: 20px;
+    --radius: 14px;
+  }
+
+  /* ——— Launcher image ——— */
+  #inviteRewardsBtn{
+    height: 72px; cursor: pointer; display: inline-block;
+    border-radius: 18px; border: 1px solid var(--border);
+    box-shadow: var(--glow);
+    transition: transform .15s ease, box-shadow .2s ease;
+  }
+  #inviteRewardsBtn:hover{ transform: translateY(-1px) scale(1.01); box-shadow: 0 18px 60px rgba(91,140,255,.45); }
+
+  /* ——— Overlay & modal (glass + animated border) ——— */
+  .invite-overlay{ position: fixed; inset: 0; display: none; place-items: center; z-index: 9999;
+    background: radial-gradient(1200px 800px at 20% -10%, rgba(91,140,255,.18), transparent 60%),
+                radial-gradient(1200px 800px at 120% 110%, rgba(255,119,199,.15), transparent 60%),
+                rgba(2,4,10,.55);
+    backdrop-filter: blur(6px);
+    padding: 24px;
+  }
+  .invite-overlay.show{ display: grid; }
+
+  .invite-modal{
+    width: min(1000px, 96vw);
+    color: var(--fg);
+    border-radius: var(--radius-xl);
+    position: relative;
+    overflow: hidden;
+    box-shadow: 0 24px 80px rgba(0,0,0,.45);
+  }
+  /* animated gradient frame */
+  .invite-modal::before{
+    content:""; position:absolute; inset:-2px; z-index:0; border-radius: calc(var(--radius-xl) + 2px);
+    background: conic-gradient(from 200deg at 50% 50%,
+      #6da3ff, #9f7fff, #ff77c7, #6da3ff);
+    animation: spin 8s linear infinite;
+    filter: blur(6px);
+  }
+  .invite-shell{
+    position: relative; z-index: 1;
+    background: linear-gradient(180deg, rgba(14,18,28,.85), rgba(10,13,20,.85));
+    border: 1px solid var(--border);
+    border-radius: inherit;
+    overflow: hidden;
+  }
+  @keyframes spin { to { transform: rotate(360deg); } }
+
+  .invite-head{
+    display:flex; align-items:center; justify-content:space-between;
+    padding: 16px 18px; background: linear-gradient(90deg, rgba(91,140,255,.08), transparent);
+  }
+  .invite-title{ font-size: 20px; font-weight: 800; letter-spacing:.2px; }
+  .invite-close{
+    border:1px solid var(--border); background:transparent; color:var(--fg);
+    padding:10px 12px; border-radius:12px; cursor:pointer;
+  }
+
+  .invite-body{
+    padding: 16px; display: grid; gap: 16px;
+    grid-template-columns: 1.2fr .8fr;
+  }
+  @media (max-width: 860px){ .invite-body{ grid-template-columns: 1fr; } }
+
+  /* ——— Link card ——— */
+  .card{
+    background: linear-gradient(180deg, rgba(255,255,255,.02), rgba(255,255,255,.00));
+    border: 1px solid var(--border);
+    border-radius: var(--radius);
+    box-shadow: var(--glow);
+    padding: 14px;
+  }
+  .muted{ color: var(--muted); font-size: 13px; }
+  .linkline{ display:grid; grid-template-columns: 1fr auto auto; gap: 8px; margin-top:8px; }
+  .linkinput{
+    width:100%; padding:12px 14px; border-radius:12px; border:1px solid var(--border);
+    background:#05070d; color:var(--fg);
+    font: 500 13px ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
+  }
+
+  .btn{
+    padding: 11px 14px; border-radius: 12px; border: 1px solid var(--border);
+    background: #121826; color: var(--fg); cursor: pointer; transition: transform .1s ease, box-shadow .2s ease, opacity .2s;
+  }
+  .btn:hover{ transform: translateY(-1px); box-shadow: 0 10px 28px rgba(0,0,0,.35); }
+  .btn[disabled]{ opacity:.5; cursor:not-allowed; }
+  .btn.accent{
+    background: linear-gradient(135deg, #6da3ff, #ff77c7);
+    color: var(--accent-text); border: none; box-shadow: 0 8px 26px rgba(109,163,255,.35);
+  }
+
+  /* ——— Rewards grid ——— */
+  .rewards{ display:grid; gap: 14px; grid-template-columns: repeat(3, 1fr); }
+  @media (max-width: 960px){ .rewards{ grid-template-columns: 1fr; } }
+
+  .reward-card{
+    position:relative; overflow:hidden;
+    border-radius:16px; padding:16px;
+    background:
+      radial-gradient(1200px 600px at -20% -40%, rgba(109,163,255,.15), transparent 60%),
+      radial-gradient(1200px 600px at 120% 140%, rgba(255,119,199,.12), transparent 60%),
+      #0e1422;
+    border: 1px solid var(--border);
+    box-shadow: var(--glow);
+  }
+  .reward-label{ font-size:12px; color:var(--muted); letter-spacing:.4px; text-transform:uppercase; }
+  .reward-amt{ font-size: clamp(22px, 3.3vw, 28px); font-weight: 900; letter-spacing:.3px; margin: 6px 0 2px; }
+  .reward-desc{ font-size: 13px; color: var(--muted); }
+  .reward-actions{ margin-top: 10px; display:flex; gap:8px; align-items:center; }
+
+  /* Locked state */
+  .reward-card.locked::after{
+    content:"🔒 Locked"; position:absolute; top:10px; right:10px;
+    font-size:12px; color: var(--muted); background: rgba(255,255,255,.05);
+    border:1px solid var(--border); padding:4px 8px; border-radius: 999px;
+  }
+
+  /* ——— Progress bar ——— */
+  .progress{
+    margin-top: 10px; height: 6px; background: rgba(255,255,255,.06);
+    border: 1px solid var(--border); border-radius: 999px; overflow: hidden;
+  }
+  .progress > i{
+    display:block; height:100%;
+    background: linear-gradient(90deg, #6da3ff, #ff77c7);
+    width: 0%;
+    transition: width .35s ease;
+  }
+
+  /* Confetti canvas */
+  #confettiCanvas{ position: fixed; inset: 0; pointer-events: none; z-index: 10000; }
 /* ===== Overlay + HUD ================================================= */
 .tt-overlay{
   position:fixed; inset:0; display:none; z-index:9999; background:#000;
@@ -1225,6 +1365,69 @@ canvas{ display:block }
         </div>
       </div>
     </div>
+<!-- Launcher image button (your repo image) -->
+<img id="inviteRewardsBtn" src="./img/getrewards.png" alt="Get Rewards" />
+<!-- Invite modal -->
+<div class="invite-overlay" id="inviteOverlay" role="dialog" aria-modal="true" aria-hidden="true">
+  <div class="invite-modal">
+    <div class="invite-shell">
+      <div class="invite-head">
+        <div class="invite-title">Invite friends → win huge CHADs</div>
+        <button class="invite-close" id="inviteCloseBtn">Close</button>
+      </div>
+
+      <div class="invite-body">
+        <!-- Left side: link + actions -->
+        <section class="card">
+          <div class="muted">Your personal invite link</div>
+          <div class="linkline">
+            <input id="inviteLink" class="linkinput" type="text" readonly value="Generating…">
+            <button class="btn" id="copyLinkBtn">Copy</button>
+            <button class="btn accent" id="shareLinkBtn">Share</button>
+          </div>
+          <div id="inviteStats" class="muted" style="margin-top:6px">Invites: 0 • Earned: 0 CHADs</div>
+          <div class="progress"><i id="inviteProgress"></i></div>
+          <p class="muted" style="margin-top:8px">
+            Tip: Share your link. When friends open the Mini App via your link, your invite is tracked (server-side).
+          </p>
+        </section>
+
+        <!-- Right side: rewards (unlock in order) -->
+        <section class="rewards">
+          <article class="reward-card" id="tier1" data-tier="1">
+            <div class="reward-label">Option 1</div>
+            <div class="reward-amt">+500,000 CHADs</div>
+            <div class="reward-desc">Kickstart bonus for inviting your first friends.</div>
+            <div class="reward-actions">
+              <button class="btn accent redeem-btn" data-tier="1">Get 500k</button>
+            </div>
+          </article>
+
+          <article class="reward-card locked" id="tier2" data-tier="2">
+            <div class="reward-label">Option 2</div>
+            <div class="reward-amt">+5,000,000 CHADs</div>
+            <div class="reward-desc">Bigger boost for spreading the word.</div>
+            <div class="reward-actions">
+              <button class="btn accent redeem-btn" data-tier="2" disabled>Get 5M</button>
+            </div>
+          </article>
+
+          <article class="reward-card locked" id="tier3" data-tier="3">
+            <div class="reward-label">Option 3</div>
+            <div class="reward-amt">+3,000,000,000 CHADs</div>
+            <div class="reward-desc">Legendary bonus for top inviters.</div>
+            <div class="reward-actions">
+              <button class="btn accent redeem-btn" data-tier="3" disabled>Get 3B</button>
+            </div>
+          </article>
+        </section>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Confetti layer -->
+<canvas id="confettiCanvas" width="0" height="0"></canvas>
 <!-- ===== Test Your Luck (scrolls with page) ===== -->
 <div id="luckBtnWrap" class="luck-btn-wrap">
   <img id="luckBtnImg" class="luck-btn-img" src="img/testyourluck.png" alt="Test your luck">
@@ -1808,6 +2011,8 @@ canvas{ display:block }
     <div class="toastWrap" id="toastWrap"></div>
   </div>
 </div>
+<!-- Telegram Web App API -->
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.js"></script>
 <script>
 /* ===== Telegram + loader ===== */
@@ -2920,7 +3125,186 @@ function buildGrid(container, cols, rows){
   });
 })();
 
+(() => {
+  // ——— Mini App identity (used to build your deep link)
+  const BOT_USERNAME = "chadilizebot";
+  const APP_NAME     = "chadilize";
 
+  const tg = window.Telegram?.WebApp;
+  try { tg?.expand?.(); } catch {}
+
+  // Shorthands
+  const $  = (s, r=document) => r.querySelector(s);
+  const $$ = (s, r=document) => [...r.querySelectorAll(s)];
+
+  // Elements
+  const overlay  = $("#inviteOverlay");
+  const openBtn  = $("#inviteRewardsBtn");
+  const closeBtn = $("#inviteCloseBtn");
+  const linkEl   = $("#inviteLink");
+  const copyBtn  = $("#copyLinkBtn");
+  const shareBtn = $("#shareLinkBtn");
+  const statsEl  = $("#inviteStats");
+  const progBar  = $("#inviteProgress");
+
+  const tierCards = [$("#tier1"), $("#tier2"), $("#tier3")];
+  const rewardButtons = $$(".redeem-btn");
+
+  // Rewards and progressive unlock
+  const REWARDS = { 1: 500_000, 2: 5_000_000, 3: 3_000_000_000 };
+  const PROG_KEY = "inviteRewardProgress"; // 0..3 (how many tiers completed)
+  const getProg = () => Number(localStorage.getItem(PROG_KEY) || "0");
+  const setProg = (v) => localStorage.setItem(PROG_KEY, String(Math.max(0, Math.min(3, v))));
+
+  // ——— Build personal code & link (server should verify initData when you add backend) ———
+  function myReferralCode() {
+    const uid = tg?.initDataUnsafe?.user?.id;
+    return uid ? Number(uid).toString(36) : "dev";
+  }
+  function buildLink(code) {
+    // Telegram passes startapp to WebApp as start_param / tgWebAppStartParam. :contentReference[oaicite:1]{index=1}
+    return `https://t.me/${BOT_USERNAME}/${APP_NAME}?startapp=${encodeURIComponent(code)}`;
+  }
+
+  function shareMessage(link){
+    return [
+      "🚀 **ChadiliZe** is LIVE on Telegram!",
+      "Tap to play, collect CHADs, and help me unlock insane bonuses:",
+      "• 500,000 → 5,000,000 → 3,000,000,000 CHADs 💥",
+      "",
+      "Join with my link ⤵",
+      link
+    ].join("\n");
+  }
+
+  function loadMe(){
+    const code = myReferralCode();
+    const link = buildLink(code);
+    if (linkEl) linkEl.value = link;
+    // Hook these to your backend when ready (initData validation & stats). :contentReference[oaicite:2]{index=2}
+    if (statsEl) statsEl.textContent = `Invites: 0 • Earned: 0 CHADs`;
+  }
+
+  // ——— Unlock UI according to progress ———
+  function syncProgressUI(){
+    const p = getProg(); // how many tiers completed
+    // progress bar (0%, 33%, 66%, 100%)
+    const pct = [0, 33, 66, 100][p] || 0;
+    if (progBar) progBar.style.width = pct + "%";
+
+    rewardButtons.forEach(btn => {
+      const tier = Number(btn.dataset.tier);
+      const enable =
+        (tier === 1 && p < 1) ||
+        (tier === 2 && p >= 1 && p < 2) ||
+        (tier === 3 && p >= 2 && p < 3);
+      btn.disabled = !enable;
+    });
+
+    // lock badges on cards
+    tierCards.forEach((card, idx) => {
+      const tier = idx + 1;
+      const done = p >= tier;
+      const nextLocked = (tier === 2 && p < 1) || (tier === 3 && p < 2);
+      card.classList.toggle("locked", nextLocked);
+      card.style.opacity = done ? .65 : 1;
+    });
+  }
+
+  // ——— Credit helper ———
+  function creditChads(amount){
+    // Prefer your game function if present
+    if (typeof window.creditChads === "function") {
+      try { window.creditChads(amount); return; } catch {}
+    }
+    // Dev fallback: localStorage + update any visible balance
+    const K = "chadsBalance";
+    const now = (Number(localStorage.getItem(K)) || 0) + Number(amount || 0);
+    localStorage.setItem(K, String(now));
+    const el = document.getElementById("chadBalance") || document.querySelector("[data-chads-balance]");
+    if (el) el.textContent = now.toLocaleString();
+  }
+
+  function toast(msg){ try { tg?.HapticFeedback?.impactOccurred?.("medium"); } catch {}; alert(msg); }
+
+  // ——— Confetti (tiny) ———
+  const confetti = (() => {
+    const c = document.getElementById("confettiCanvas");
+    const x = c.getContext("2d");
+    let W = 0, H = 0, pieces = [], raf;
+    function resize(){ W = c.width = innerWidth; H = c.height = innerHeight; }
+    function spawn(n=120){
+      pieces = Array.from({length:n}, () => ({
+        x: Math.random()*W, y: -20 - Math.random()*H*0.2,
+        r: 4 + Math.random()*4, a: Math.random()*Math.PI,
+        vx: -1 + Math.random()*2, vy: 2 + Math.random()*3,
+        hue: 200 + Math.random()*160
+      }));
+      if (!raf) loop();
+    }
+    function loop(){
+      raf = requestAnimationFrame(loop);
+      x.clearRect(0,0,W,H);
+      for (const p of pieces){
+        p.x += p.vx; p.y += p.vy; p.a += 0.05;
+        x.fillStyle = `hsl(${p.hue}, 90%, 60%)`;
+        x.save(); x.translate(p.x, p.y); x.rotate(p.a);
+        x.fillRect(-p.r, -p.r, p.r*2, p.r*2);
+        x.restore();
+      }
+      pieces = pieces.filter(p => p.y < H+40);
+      if (!pieces.length){ cancelAnimationFrame(raf); raf = null; }
+    }
+    addEventListener("resize", resize, {passive:true}); resize();
+    return { spawn };
+  })();
+
+  // ——— Copy & Share ———
+  copyBtn?.addEventListener("click", async () => {
+    try { await navigator.clipboard.writeText(linkEl.value); toast("Link copied"); } catch {}
+  });
+
+  shareBtn?.addEventListener("click", () => {
+    const url  = linkEl.value;
+    const text = shareMessage(url);
+    // Telegram share URL opens native chat picker. :contentReference[oaicite:3]{index=3}
+    const shareUrl = `https://t.me/share/url?url=${encodeURIComponent(url)}&text=${encodeURIComponent(text)}`;
+    tg?.openTelegramLink?.(shareUrl);
+  });
+
+  // ——— Redeem (progressive unlock) ———
+  rewardButtons.forEach(btn => {
+    btn.addEventListener("click", async () => {
+      const tier = Number(btn.dataset.tier);
+      const amount = REWARDS[tier];
+      if (!amount) return;
+
+      // TODO (server): send { initData: tg.initData, tier } to your backend to validate & credit. :contentReference[oaicite:4]{index=4}
+      // For now: local credit + progress unlock
+      creditChads(amount);
+      confetti.spawn(140);
+      toast(`+${amount.toLocaleString()} CHADs`);
+
+      const p = getProg();
+      if (tier === 1 && p < 1) setProg(1);
+      if (tier === 2 && p < 2) setProg(2);
+      if (tier === 3 && p < 3) setProg(3);
+      syncProgressUI();
+    });
+  });
+
+  // ——— Modal behavior ———
+  const open = () => overlay?.classList.add("show");
+  const close = () => overlay?.classList.remove("show");
+  openBtn?.addEventListener("click", open);
+  closeBtn?.addEventListener("click", close);
+  overlay?.addEventListener("click", (e) => { if (e.target === overlay) close(); });
+  addEventListener("keydown", (e) => { if (e.key === "Escape") close(); });
+
+  // Init
+  loadMe();
+  syncProgressUI();
+})();
 
 /* ===== Snake ===== */
 const snakeGridEl = document.getElementById('snakeGrid'); let S=null, sLoop=null;
